--- a/src/app/balanced-bbst/balanced-bbst.component.html
+++ b/src/app/balanced-bbst/balanced-bbst.component.html
@@ -1,5 +1,9 @@
 <!-- balanced-bbst.component.html -->
 
+<script>
+  console.log("balanced-bbst.component.html");
+</script>
+
 <button (click)="addInputField()">Add Input Field</button>
 <button (click)="test()">Generate BBST</button>
 <div id="input-container"></div>
