--- a/src/app/balanced-bbst/balanced-bbst.component.html
+++ b/src/app/balanced-bbst/balanced-bbst.component.html
@@ -1,5 +1,20 @@
 <!-- balanced-bbst.component.html -->
 
+<style>
+  table {
+    margin: auto;
+  }
+
+  th,
+  td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+    padding: 10px;
+    width: 50px; /* Adjust the width as needed */
+  }
+</style>
+
 <script>
   console.log("balanced-bbst.component.html");
 </script>
